killmail page adjustments

--- a/www/public/css/z.css
+++ b/www/public/css/z.css
@@ -222,6 +222,13 @@ div#overview-information ul li {
 
 .leftkillblockcontainer {
     max-width: 1100px;
+    display: inline-block;
+    float: left;
+}
+
+.rightkillblockcontainer {
+    display: inline-block;
+    float: left;
 }
 
 .killblock {
@@ -288,6 +295,11 @@ div.attacker ul {
 #attacker3 {
     padding-left: 2px;
     width: 248px;
+}
+
+#attacker4 {
+    float: right;
+    text-align: right;
 }
 
 
