--- a/www/views/killmail.pug
+++ b/www/views/killmail.pug
@@ -103,7 +103,7 @@ div.rightkillblockcontainer
 				div#remainingattackers.d-none
 					+spinner
 		div#killmail-comments
-
+div.clearfix
 
 - //var fwDoc = document.getElementById("fittingwheel").contentDocument
 - var fw = JSON.stringify(json.killmail.fittingwheel, undefined)
