--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -21,8 +21,8 @@ html
                 hr
                 div#overview.collapse.container-fluid
                     div.row
-                        div#overview-information.col-6
-                        div#overview-statistics.col-6
+                        div#overview-information.col-sm-12.col-xl-6
+                        div#overview-statistics.col-sm-12.col-xl-6
                             div.table-responsive.float-right
                                 table#stats-table.table.table-hover.table-sm.table-responsive
                                     thead
@@ -113,9 +113,9 @@ html
                                 button.ofilter.btn.btn-secondary(type='button') INSANEISK
                     br   
                     div.row
-                        div#overview-killmails
+                        div#overview-killmails.col-sm-12.col-xl-6
                             div#killlist
-                        div#overview-weekly
+                        div#overview-weekly.col-sm-12.col-xl-6
                 div#killmail.row.collapse
                 div#other.row.collapse
         div.clearfix.push
