--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -1,3 +1,13 @@
+mixin show_link(tag, type, id, name, extra)
+	if type == 'character_id'
+		+char_id_link(tag, id, name, extra)
+	else if type == 'corporation_id'
+		+corp_id_link(tag, id, name, extra)
+	else if type== 'alliance_id'
+		+alli_id_link(tag, id, name, extra)
+	else
+		+type_id_link(tag, type.replace('_id', ''), id, name, extra)
+
 mixin char_id_link(tag, id, name, extra)
 	+type_id_link(tag, 'character', id, name, extra)
 
@@ -6,7 +16,6 @@ mixin corp_id_link(tag, id, name)
 
 mixin alli_id_link(tag, id, name)
 	+type_id_link(tag, 'alliance', id, name)
-
 
 mixin type_id_link(tag, type, id, name, extra)
 	-var url = '/' + type + '/' + id
@@ -47,6 +56,22 @@ mixin tag_image(tag, url, src, name, size)
 		a.override(href=url)
 			img.image(src=src title=name alt=name style=imageHolder onerror=onerror)
 
+mixin show_image(tag, type, id, name, size)
+	if type == 'character_id'
+		+char_image(tag, id, name, size)
+	else if type == 'corporation_id'
+		+corp_image(tag, id, name, size)
+	else if type== 'alliance_id'
+		+alli_image(tag, id, name, size)
+	else if type == 'faction_id'
+		+faction_image(tag, id, name, size)
+	else if type == 'item_id'
+		+type_image(tag, id, name, size)
+	else
+		- var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
+		- src='https://images.evetech.net/alliances/1/logo?size=' + size
+		img.image(src=src title=name alt=name style=imageHolder)
+
 mixin type_image(tag, id, name, size)
 	if id != undefined
 		-var category = (size <= 64 ? 'icon' : 'render')
@@ -66,6 +91,13 @@ mixin alli_image(tag, id, name, size)
 mixin corp_image(tag, id, name, size)
 	if id != undefined
 		-var url = '/corporation/' + id
+		-var image = 'https://images.evetech.net/corporations/' + id + '/logo?size=' + size
+		-var name = (name == null || name == undefined || name == '' ? type + ' ' + id : name)
+		+tag_image(tag, url, image, name, size)
+
+mixin faction_image(tag, id, name, size)
+	if id != undefined
+		-var url = '/faction/' + id
 		-var image = 'https://images.evetech.net/corporations/' + id + '/logo?size=' + size
 		-var name = (name == null || name == undefined || name == '' ? type + ' ' + id : name)
 		+tag_image(tag, url, image, name, size)
