--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -133,6 +133,7 @@ div.collapse
             div
             div
             div
+div#loading-zone
 script
     | var start_time = Date.now()
 //-script(defer src='https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.0.0/dist/lazyload.min.js')
