--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -68,9 +68,10 @@ mixin show_image(tag, type, id, name, size)
 	else if type == 'item_id'
 		+type_image(tag, id, name, size)
 	else
-		- var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
-		- src='https://images.evetech.net/alliances/1/logo?size=' + size
-		img.image(src=src title=name alt=name style=imageHolder)
+		-var url = '/' + type.replace('_id', '') + '/' + id
+		-var image = 'https://images.evetech.net/alliances/1/logo?size=' + size
+		-var name = (name == null || name == undefined || name == '' ? type + ' ' + id : name)
+		+tag_image(tag, url, image, name, size)
 
 mixin type_image(tag, id, name, size)
 	if id != undefined
